--- a/README
+++ b/README
@@ -1,23 +1,21 @@
-<h1>BLAM! - Beautify Lint And Minify</h1>
+BLAM! - Beautify Lint And Minify
 
     This tool is intended to allow a user to beautify, lint and minify their JavaScript before comitting it to a repository. When working in large teams or groups, it is advantageous to use a unified coding style, (as set by lint), and ensure the files are always kept beautiful.  Furthermore, the tool includes the ability to create a minified version of the file which can be used in production straight away.
 
-<h2>BLAM uses the following tools</h2>
+BLAM uses the following tools>
     
-<ul>
-    <li>jsLint (http://www.jslint.com)</li>
-    <li>jsbeautifier (http://jsbeautifier.org)</li>
-    <li>YUI Compressor (http://developer.yahoo.com/yui/compressor/)</li>
-    <li>NaturalDocs (http://www.naturaldocs.org/)</li>
-    <li>Spidermonkey JS (http://www.mozilla.org/js/spidermonkey/)</li>
-</ul>
+    jsLint (http://www.jslint.com)
+    jsbeautifier (http://jsbeautifier.org)
+    YUI Compressor (http://developer.yahoo.com/yui/compressor/)
+    NaturalDocs (http://www.naturaldocs.org/)
+    Spidermonkey JS (http://www.mozilla.org/js/spidermonkey/)
 
-<h2>Additionally the following for the windows version</h2>
+Additionally the following for the windows version
 
-    <li>Cygwin for the windows version (http://www.cygwin.com/)</li>
-    <li>Strawberry perl (portable) for the windows version (http://strawberryperl.com/)</li>
-    <li>Couch DB Spidermonkey for windows version (http://wiki.apache.org/couchdb/Installing_on_Windows#Windows_Installer)</li>
+    Cygwin for the windows version (http://www.cygwin.com/)
+    Strawberry perl (portable) for the windows version (http://strawberryperl.com/)
+    Couch DB Spidermonkey for windows version (http://wiki.apache.org/couchdb/Installing_on_Windows#Windows_Installer)
 
-<h1>Installation and integration</h1>
+Installation and integration
 
-See <a href="http://github.com/jsguy/blam/wiki/">the wiki for instructions</a>.
+See http://github.com/jsguy/blam/wiki/ for instructions.
